[package]
name = "bench-csv-codec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
flate2 = "1.0.35"
lz4 = "1.28.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
snap = "1.1.1"
zstd = "0.13.2"
